tripsapi.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: tripsapi
  name: tripsapi
spec:
  containers:
  - image: registryhcv3795.azurecr.io/openhack/tripsapi:latest
    name: tripsapi
    ports:
    - containerPort: 80
