tripviewer.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: tripviewer
  name: tripviewer
spec:
  containers:
  - image: registryhcv3795.azurecr.io/openhack/tripviewer:latest
    name: tripviewer
