userprofile.yaml
apiVersion: v1
kind: Pod
metadata:
  labels:
    run: userprofile
  name: userprofile
spec:
  containers:
  - image: registryhcv3795.azurecr.io/openhack/userprofile:latest
    name: userprofile
    ports:
    - containerPort: 80
