svc-poiapi.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-poiapi
spec:
  selector:
    run: poiapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
