svc-tripviewer.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-tripviewer
spec:
  selector:
    run: tripviewer
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
