svc-user-java.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-user-java
spec:
  selector:
    run: user-java
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
