svc-userprofile.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-userprofile
spec:
  selector:
    run: userprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
