ingress-openhack-api.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: openhack-ingress-api
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
  namespace: api
spec:
  rules:
  - http:
      paths:
      - path: /api/poi
        pathType: Prefix
        backend:
          service:
            name: svc-poiapi
            port:
              number: 80
      - path: /api/trips
        pathType: Prefix
        backend:
          service:
            name: svc-tripsapi
            port:
              number: 80
